# cy

./: .clang-tidy  .clangd  .gdbinit  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  README.md  cyphal_wireshark.lua  optimistic_dad_montecarlo.py  rustfmt.toml  topic_hash_collider.py
.claude/: settings.json
.claude/skills/review-loop/: SKILL.md
.github/workflows/: main.yml
.zed/: settings.json
cy/: CMakeLists.txt  README.md  cy.c  cy.h  cy_platform.h
cy_can/: CMakeLists.txt  cy_can.c  cy_can.h  cy_can_socketcan.c  cy_can_socketcan.h
cy_can/tests/: CMakeLists.txt  test_api_can_constructor.c  test_api_can_failures.c  test_api_can_pubsub.c  test_api_can_redundancy_lifecycle.c  test_api_can_reliable_rpc.c  test_api_can_socketcan_e2e.c  test_api_can_spin.c  test_api_can_subscription_revival.cpp  test_api_can_tombstone_revival.c  test_api_can_v0.c  test_support.c  test_support.h
cy_udp_posix/: CMakeLists.txt  cy_trace_stderr.c  cy_udp_posix.c  cy_udp_posix.h  eui64.h  udp_wrapper.c  udp_wrapper.h
cy_udp_posix/tests/: CMakeLists.txt  test_api_udp_posix_basic.c  test_api_udp_posix_default_ctor.c  test_api_udp_posix_pubsub.c  test_api_udp_posix_resilience.c  test_api_udp_posix_rpc_lifecycle.c  test_support.c  test_support.h
dsdl/cyphal/: 7509.Heartbeat.1.1.dsdl  CRUD.0.1.dsdl
dsdl/cyphal/node/: 7509.Heartbeat.1.1.dsdl
examples/: CMakeLists.txt  arg_kv.h  cy_trace_stderr.c  cy_udp.c  cy_udp.h  example_dronecan_echo.c  example_echo.c  example_file_client.c  example_file_server.c  example_platform.h  example_pub.c  example_streaming_client.c  example_streaming_server.c  example_sub.c  example_time_pub.c  hexdump.h  main_udp.c  main_udp_echo.c  main_udp_file_client.c  main_udp_file_server.c  main_udp_node.c  main_udp_pub.c  main_udp_streaming_client.c  main_udp_streaming_server.c  main_udp_sub.c  main_udp_time_pub.c  util.h
formal/: PROOF.md  README.md  Utils.tla  run.sh
formal_verification/: .gitignore  Core.cfg  Core.tla  CyphalTopics.cfg  CyphalTopics.tla  CyphalTopics_1.cfg  CyphalTopics_1.tla  README.md  TopicOps.cfg  TopicOps.tla  Utils.tla  cyphal_topics.tla  run.sh
formal_verification/cyphal_topics.toolbox/: cyphal_topics___Model_1.launch
lib/: rapidhash.h  wild_key_value.h
model/: DESIGN.md  README.md  gossip_propagation.ipynb  proof.md
model/montecarlo/: Cargo.toml  README.md  topic_allocation_montecarlo.rs
model/montecarlo/src/: main.rs  message.rs  network.rs  node.rs  simulation.rs  topic.rs  util.rs
model/montecarlo/src/node/: gossip_dedup.rs  mod.rs  peer_sampler.rs  tests.rs
model/montecarlo/src/simulation/: mod.rs  network.rs
model/tlaplus/: Core.cfg  Core.tla  README.md
tests/: CMakeLists.txt  README.md
tests/platform_stubs/: guarded_heap.c  guarded_heap.h  message.c  message.h
tests/src/: api_mock_platform_utils.hpp  cy_trace.c  e2e_faults.cpp  e2e_faults.hpp  e2e_scenario_utils.hpp  e2e_sim_net.cpp  e2e_sim_net.hpp  e2e_test_utils.cpp  e2e_test_utils.hpp  gossip_test_utils.hpp  helpers.c  helpers.h  intrusive_fixture_utils.h  intrusive_message_fixture.h  test_api_can_subscription_revival.cpp  test_api_consensus_e2e_multinode.cpp  test_api_consensus_edge_matrix.cpp  test_api_consensus_model_based.cpp  test_api_core_contracts.cpp  test_api_gossip.cpp  test_api_gossip_sim.cpp  test_api_name.cpp  test_api_parser_adversarial.cpp  test_api_pinning_e2e_cohabitation.cpp  test_api_pinning_e2e_pattern_match.cpp  test_api_pinning_e2e_subject_id.cpp  test_api_publish_reliable.cpp  test_api_pubsub_e2e_baseline.cpp  test_api_pubsub_e2e_lifecycle.cpp  test_api_pubsub_e2e_migration.cpp  test_api_pubsub_e2e_platform_failures.cpp  test_api_pubsub_e2e_reliable_loss.cpp  test_api_pubsub_e2e_reordering.cpp  test_api_remap.cpp  test_api_rpc_e2e.cpp  test_api_rx.cpp  test_api_state_machine_fuzz.cpp  test_intrusive_dedup.c  test_intrusive_factory_uaf.c  test_intrusive_false_ack.c  (+10 more)
todo/: C1-cavl-factory-uaf.md  H1-ordered-restart-blackhole.md  H2-pattern-coupling-local-topics.md  H3-autodestroy-cancels-reliable.md  H4-udp-zero-length-double-free.md  H5-can-besteffort-pinned-loss.md  H6-can-anonymous-sender-overflow.md  L12-cy-respond-message-validation.md  L13-cy-new-remap-leak-on-oom.md  L14-reject-empty-names.md  L15-udp-prng-seed-resolution.md  L16-vestigial-ttl-comments.md  L17-same-subject-realloc-churn.md  L4-dead-publish-futures-unadvertise-uaf.md  L5-unadvertise-misses-request-futures.md  L6-request-onresponse-oom-nack.md  L8-pinned-conflict-doc.md  M1-deferred-subscriber-destroy.md  M2-verbatim-extent-precedence.md  M3-modulus-rule-mismatch.md  M5-can-single-iface-tx-waste.md  M5-can-tx-active-iface-set.md  M5b-udp-tx-active-iface-set.md  M6-udp-eintr-aborts-loop.md  M7-gossip-name-validation.md  M8-false-ack-failed-acceptance.md  report-for-humans-only.html  repro-tests-reference.c
todo/resolved/: C1-cavl-factory-uaf.md  H1-ordered-restart-blackhole.md  H2-pattern-coupling-local-topics.md  H3-autodestroy-cancels-reliable.md  H5-can-besteffort-pinned-loss.md  H6-can-anonymous-sender-overflow.md  L12-cy-respond-message-validation.md  L14-reject-empty-names.md  L15-udp-prng-seed-resolution.md  L16-vestigial-ttl-comments.md  L17-same-subject-realloc-churn.md  L4-dead-publish-futures-unadvertise-uaf.md  L5-unadvertise-misses-request-futures.md  L6-request-onresponse-oom-nack.md  L8-pinned-conflict-doc.md  M1-deferred-subscriber-destroy.md  M2-verbatim-extent-precedence.md  M3-modulus-rule-mismatch.md  M5-can-tx-active-iface-set.md  M5b-udp-tx-active-iface-set.md  M7-gossip-name-validation.md  M8-false-ack-failed-acceptance.md
tools/: ci_example_smoke.py  rapidhash.py  topic_hash_collider.py  vcan.sh
